# Heat-Equation

./: CMakeLists.txt  main.cpp
Results/KMB/: KMB1.txt  KMB1_a.txt  KMB2.txt  KMB2_a.txt  KMB3.txt  KMB3_a.txt  KMB4.txt  KMB4_a.txt  KMB5.txt  KMB6.txt
Results/Laasonen/: AT1.txt  AT2.txt  AT3.txt  AT4.txt  T1.txt  T2.txt  T3.txt  T4.txt  T6.txt
src/: calerf.cpp
src/Iterative_Methods/Gauss-Seidel/: GaussSeidel.cpp  GaussSeidel.h
src/Iterative_Methods/Thomas/: thomas.cpp  thomas.h
src/KMB/: KMB.cpp  KMB.h
src/Laasonen/: laasonen.cpp  laasonen.h
src/analytic/: analytic.cpp  analytic.h
src/tools/: fill.cpp  max_error.cpp  save.cpp  tools.h
